--- a/src/fadeModules/fadeAppTitle.module.css
+++ b/src/fadeModules/fadeAppTitle.module.css
@@ -18,3 +18,11 @@
   margin: 0;
   font-size: 12px;
 }
+
+.appear {
+  transform: translateX(-100%);
+}
+.appearActive {
+  transform: translateX(0);
+  transition: transform 500ms linear;
+}
